--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="carousel__control"></div>
       <div class="carousel__stage">
         <div class="spinner spinner--left">
-          <div class="spinner__face js-active" data-bg="#27323c">
+          <div class="spinner__face js-active" data-bg="#00FF00">
             <div class="content" data-type="iceland">
               <div class="content__left">
                 <h1>ICELAND<br /><span>EUROPE</span></h1>
@@ -35,7 +35,7 @@
               </div>
             </div>
           </div>
-          <div class="spinner__face" data-bg="#19304a">
+          <div class="spinner__face" data-bg="#FF0000">
             <div class="content" data-type="china">
               <div class="content__left">
                 <h1>CHINA<br /><span>ASIA</span></h1>
@@ -56,7 +56,7 @@
               </div>
             </div>
           </div>
-          <div class="spinner__face" data-bg="#2b2533">
+          <div class="spinner__face" data-bg="#0000FF">
             <div class="content" data-type="usa">
               <div class="content__left">
                 <h1>USA<br /><span>NORTH AMERICA</span></h1>
@@ -79,7 +79,7 @@
               </div>
             </div>
           </div>
-          <div class="spinner__face" data-bg="#312f2d">
+          <div class="spinner__face" data-bg="#000000">
             <div class="content" data-type="peru">
               <div class="content__left">
                 <h1>PERU<br /><span>SOUTH AMERICA</span></h1>
